codepattern/c/ca/log.gcc/ca-02127.stderr
src/ca-02127.c:12:1: error: expected statement
}
^
1 error generated.
